[package]
name = "mem-allocs"
version = "0.1.0"
edition = "2024"

[features]
default = ["c_allocator", "arena_allocator"]
arena_allocator = []
c_allocator = ["libc"]


[dependencies]
libc = { version = "0.2.161", optional = true }

[dev-dependencies]
rand = "0.9.1"

[lints.clippy]
cognitive_complexity = "warn"
dbg_macro = "warn"
doc_markdown = "warn"
nursery = "warn"
pedantic = "warn"

[lints.rust]
unused_extern_crates = "warn"
unused_import_braces = "warn"
